Fixed menu on mobile

--- a/src/components/banner/Banner.css
+++ b/src/components/banner/Banner.css
@@ -12,7 +12,7 @@
 }
 
 .nav-banner.closed {
-  transform: translateY(-47px);
+  display: none;
 }
 .nav-banner-content {
   display: flex;
